--- a/index.html
+++ b/index.html
@@ -14,33 +14,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-  <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
-  <!--     
-
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      var swiper = new Swiper('.swiper-container', {
-        loop: true,
-        autoplay: {
-          delay: 0,
-          disableOnInteraction: false,
-        },
-        speed: 10000, // Adjust the speed as needed
-        slidesPerView: 5, // Number of slides visible at once
-        spaceBetween: 10, // Space between slides
-        pagination: {
-          el: '.swiper-pagination',
-          clickable: true,
-        },
-        navigation: {
-          nextEl: '.swiper-button-next',
-          prevEl: '.swiper-button-prev',
-        },
-      });
-    });
-  </script> -->
-
 
   <!--[if lt IE 9]>
     <script src="js/respond-1.1.0.min.js"></script>
@@ -58,11 +31,11 @@
       <div class="header_box">
         <!-- <div class="logo"><a href="#"><img src="img/logo.png" alt="logo"></a></div> -->
         <nav class="navbar navbar-inverse" role="navigation">
-          <div class="navbar-header">
+<!--           <div class="navbar-header">
             <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav">
               <span class="md-only sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span
                 class="icon-bar"></span> <span class="icon-bar"></span> </button>
-          </div>
+          </div> -->
           <div id="main-nav" class="collapse navbar-collapse navStyle">
             <ul class="nav navbar-nav" id="mainNav">
               <li class="active"><a href="#hero_section" class="scroll-link">Home</a></li>
@@ -89,8 +62,8 @@
           <div class="row">
             <div class="col-lg-5 col-sm-7">
               <div class="top_left_cont">
-                <h2 class="h2text">Sri Somanatheshwara Cave temple, Nellitheertha</h2>
-                <p style="text-align: left">Nellitheertha Cave Temple in Nellitheertha, Karnataka, India is dedicated to the Indian deity Sri
+                <h2 class="h2text">Shree Somanatheshwara Guhalaya, Nellitheertha</h2>
+                <p style="text-align: left">Shree Somanatheshwara Guhalaya in Nellitheertha, Karnataka, India is dedicated to the Indian deity Sri
                   Somanatheshwara, or Shiva.</p>
                 <a href="#"></a>
               </div>
@@ -117,7 +90,7 @@
             <div class=" delay-01s animated fadeInDown wow animated">
               <h3 style="color:rgb(181, 133, 47)">INTRODUCTION</h3>
               <br>
-              <p>The main deity of the temple is <b>Sri Somanatheshwara</b><i> (Shiva)</i>. The temple also has
+              <p>The main deity of the temple is <b>Shree Somanatheshwara Guhalaya</b><i> (Shiva)</i>. The temple also has
                 <b>MahaGanapati</b><i> (Elephant - headed God)</i> and <b>Jabali Maharshi</b> as deities here. In
                 typical Tulu-naadu (Tulu is the native language in this part of the woods) tradition, the temple also
                 has its set of <b>“Bhootas”</b>. Bhootas are considered as the <b>“Ganas”</b> or warrior-assistants of
@@ -127,7 +100,7 @@
               </p>
               <br>
               <p>
-                The Lingam of Shri Somanatheshwara has been made out of pure Saligrama and is considered very sacred.
+                The Lingam of Shree Somanatheshwara has been made out of pure Saligrama and is considered very sacred.
                 The Lingam has been built as Ardhanareeshwara. There are other artifacts in and around the temple
                 which are pointers to the past glory of this place. Among them are the <b>“Arasule Mancha”</b>
                 <i>(King’s abode)</i>,
@@ -187,7 +160,7 @@
                   grand
                   state, the temple gradually declined and its existence itself was threatened towards the later part of
                   the twentieth century. Since then, devotees and well wishers have got together to restore the temple
-                  toits previous grandeur. With the blessings of <b>Shri Somanatha</b>, the temple renovation work is
+                  toits previous grandeur. With the blessings of <b>Shree Somanatha</b>, the temple renovation work is
                   now
                   on in full swing.
                 </p><br>
@@ -310,7 +283,7 @@
                   ugly head all over the world. This became especially rampant in "Parashurama Kshetra" where
                   lawlessness, murder, robbery, disregard for God became the order of the day and the lives of ordinary
                   people became miserable. Just when things were getting completely out of control, Sage Narada, who is
-                  always working for world peace, decided it was time for some divine intervention and met Lord Shri
+                  always working for world peace, decided it was time for some divine intervention and met Lord Shree
                   Maha Vishnu, the proliferator of Dharma on this land. Lord Maha Vishnu consulted Lord Parameshwara
                   (Shiva) and came to a conclusion on the action plan for restoration of Dharma on earth. Accordingly,
                   under the stewardship of Lord Vishnu's vehicle Vasuki (Nagaraj or Snake God), Lord Shiva's ganas
@@ -383,7 +356,7 @@
                 <b>Jabali reaches Nagavana</b>
                 <p>
                   Upon receiving Sage Narada's advice and Lord Shiva's order and having realized that both of them had
-                  suggested that Shri Shakti is alone the way out for this problem, it dawned upon Sage Jabali that the
+                  suggested that Shree Shakti is alone the way out for this problem, it dawned upon Sage Jabali that the
                   time for appeasement of Shakti had arrived. He traveled southward along with Shiva's ganas and reached
                   a forest which was full of Bilva trees.
                 </p>
@@ -511,7 +484,7 @@
                 <p>
                   Lord Shakti continued addressing her devotees "O Parameshwara! You may reside at the place where Sage
                   Jabali performed penance. Appear there in the form of a Lingam and bless the devotees with their
-                  wishes <b>(This place is Nagavana or Nellitheertha where Lord Shiva resides as Lord Shri
+                  wishes <b>(This place is Nagavana or Nellitheertha where Lord Shiva resides as Lord Shree
                     Somanatheshwara)</b>. O Ganga! You may flow in the cave for six months a year and help people get
                   rid of their sins. You may get back to Kashi for the other six months. Let this place be called as
                   Dakshina
@@ -762,8 +735,8 @@
           <div class="col-lg-4 wow fadeInLeft">
             <div class="contact_info">
               <div class="detail">
-                <h4>Nellitheertha Sri Somanatheshwara Cave temple, (Sri Kshetra Nellitheertha)</h4>
-                <p> Neerude Post, Kompadavu Village Mangalore Taluk, South Kanara District Karnataka, India – 570063</p>
+                <h4>Shree Somanatheshwara Guhalaya, (Sri Kshetra Nellitheertha)</h4>
+                <p> Neerude Post, Kompadavu Village, Mangalore Taluk, D.K District Karnataka, India – 574144</p>
               </div>
               <div class="detail">
                 <h4>Call Us</h4>
