--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
           <div class="col-lg-4 wow fadeInLeft">
             <div class="contact_info">
               <div class="detail">
-                <h4>Shree Somanatheshwara Guhalaya, (Sri Kshetra Nellitheertha)</h4>
+                <h4>Shree Somanatheshwara Guhalaya (Sri Kshetra Nellitheertha)</h4>
                 <p> Neerude Post, Kompadavu Village, Mangalore Taluk, D.K District Karnataka, India – 574144</p>
               </div>
               <div class="detail">
