--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <li><a href="#cave" class="scroll-link">CAVE</a></li>
               <li><a href="#birth" class="scroll-link">THE BIRTH</a></li>
               <li><a href="#gallery" class="scroll-link">GALLERY</a></li>
-              <li><a href="#sevas" class="scroll-link">SEVAS</a></li>
+<!--               <li><a href="#sevas" class="scroll-link">SEVAS</a></li> -->
               <li><a href="Appeal_English.pdf" class="scroll-link blink_me" target="_blank" style="color:green; ">AN APPEAL</a></li>
               <li><a href="#contact" class="scroll-link">CONTACT</a></li>
             </ul>
