--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, maximum-scale=1">
   <title>Nellitheertha Temple</title>
-<!--   <link rel="icon" href="favicon.png" type="image/png"> -->
+  <link rel="icon" href="favicon.png" type="image/png">
   <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <link href="css/font-awesome.css" rel="stylesheet" type="text/css">
@@ -44,8 +44,8 @@
               <li><a href="#cave" class="scroll-link">CAVE</a></li>
               <li><a href="#birth" class="scroll-link">THE BIRTH</a></li>
               <li><a href="#gallery" class="scroll-link">GALLERY</a></li>
-<!--               <li><a href="#sevas" class="scroll-link">SEVAS</a></li> -->
-              <li><a href="Appeal_English.pdf" class="scroll-link blink_me" target="_blank" style="color:green; ">AN APPEAL</a></li>
+              <!-- <li><a href="#sevas" class="scroll-link">SEVAS</a></li> -->
+              <li><a href="Appeal_English.pdf" class="scroll-link blink_me" style="color:green; ">AN APPEAL</a></li>
               <li><a href="#contact" class="scroll-link">CONTACT</a></li>
             </ul>
           </div>
@@ -61,15 +61,15 @@
       <div class="container" >
         <div class="hero_section">
           <div class="row">
-            <div class="col-lg-5 col-sm-7">
+            <div class="col-lg-7 col-sm-7">
               <div class="top_left_cont">
                 <h2 class="h2text">Shree Somanatheshwara Guhalaya, Nellitheertha</h2>
-                <p style="text-align: left">Shree Somanatheshwara Guhalaya in Nellitheertha, Karnataka, India is dedicated to the Hindu/Vedic deity Sri
+                <p style="text-align: left">Shree Somanatheshwara Guhalaya in Nellitheertha, Karnataka, India is dedicated to the Indian deity Sri
                   Somanatheshwara, or Shiva.</p>
                 <a href="#"></a>
               </div>
             </div>
-            <div class="col-lg-7 col-sm-5">
+            <div class="col-lg-5 col-sm-5">
               <div class="pull-right"><img
                   src="https://img1.wsimg.com/isteam/ip/b62d6b65-5c7c-41ed-a3f4-62e3a2516576/PXL_20231228_055718298.PORTRAIT.jpg/:/rs=w:500,h:500"
                   alt=""></div>
