--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="col-lg-7 col-sm-7">
               <div class="top_left_cont">
                 <h2 class="h2text">Shree Somanatheshwara Guhalaya, Nellitheertha</h2>
-                <p style="text-align: left">Shree Somanatheshwara Guhalaya in Nellitheertha, Karnataka, India is dedicated to the Indian deity Sri
+                <p style="text-align: left">Shree Somanatheshwara Guhalaya in Nellitheertha, Karnataka, India is dedicated to the Hindu/Vedic deity Sri
                   Somanatheshwara, or Shiva.</p>
                 <a href="#"></a>
               </div>
