--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <li><a href="#history" class="scroll-link">HISTORY</a></li>
               <li><a href="#cave" class="scroll-link">CAVE</a></li>
               <li><a href="#birth" class="scroll-link">THE BIRTH</a></li>
-              <li><a href="#gallery" class="scroll-link">GALLERY</a></li>
+              <!-- <li><a href="#gallery" class="scroll-link">GALLERY</a></li> -->
               <!-- <li><a href="#sevas" class="scroll-link">SEVAS</a></li> -->
               <li><a href="Appeal_English.pdf" class="scroll-link blink_me" style="color:green; ">AN APPEAL</a></li>
               <li><a href="#contact" class="scroll-link">CONTACT</a></li>
@@ -576,8 +576,6 @@
       Add more gallery-item divs as needed
     </div>
   </section> -->
-
-
 
   <!-- Gallery -->
   <!-- <section id="gallery" class="content">
